--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,39 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
+argcomplete==3.1.2
 asgiref==3.7.2
 async-timeout==4.0.3
-asynctest==0.13.0
 attrs==23.1.0
+boto3==1.28.61
+botocore==1.31.61
 certifi==2023.7.22
-charset-normalizer==3.2.0
-Django==3.2.21
-frozenlist==1.3.3
+cfn-flip==1.3.0
+charset-normalizer==3.3.0
+click==8.1.7
+Django==4.2.6
+django-s3-storage==0.14.0
+durationpy==0.5
+frozenlist==1.4.0
+hjson==3.1.0
 idna==3.4
-importlib-metadata==6.7.0
+jmespath==1.0.1
+kappa==0.6.0
+MarkupSafe==2.1.3
 multidict==6.0.4
 openai==0.28.1
-pytz==2023.3.post1
+placebo==0.9.0
+python-dateutil==2.8.2
+python-slugify==8.0.1
+PyYAML==6.0.1
 requests==2.31.0
+s3transfer==0.7.0
+six==1.16.0
 sqlparse==0.4.4
+text-unidecode==1.3
+toml==0.10.2
 tqdm==4.66.1
-typing-extensions==4.7.1
-urllib3==2.0.5
+troposphere==4.4.1
+urllib3==1.26.17
+Werkzeug==3.0.0
 yarl==1.9.2
-zipp==3.15.0
-zappa
-django-s3-storage
+zappa==0.58.0
